--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_gif: ^0.0.4
   animated_text_kit: ^4.2.1
   audioplayers: ^5.2.1
+  flutter_screenutil: ^5.9.3
 
 
 dev_dependencies:
